5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1715_3038.log
== TEST (2019-05-02 16:14:08) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print()
	elif(-1<x<0)or(0<x<1):
		print(obs(x))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.4437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:31) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print(sqrt(obs(x)))
	elif(-1<x<0)or(0<x<1):
		print(obs(x))
	elif(x==0):
		print(0)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(sqrt(obs(x)))
NameError: name 'obs' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:54) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print(sqrt(abs(x)))
	elif(-1<x<0)or(0<x<1):
		print(abs(x))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.4106735979665885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:35) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print(sqrt(abs(round(x,2)))
	elif(-1<x<0)or(0<x<1):
		print(abs(round(x.2))
	elif(x==0):
		print(0)
		
-- ERROR:
File "XXXX", line 8
    elif(-1<x<0)or(0<x<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:50) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print(sqrt(abs(x)))
	elif(-1<x<0)or(0<x<1):
		print(abs(x))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.4106735979665885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:20) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print(round(sqrt(abs(x,2))))
	elif(-1<x<0)or(0<x<1):
		print(round(abs(x)))
	elif(x==0):
		print(0)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(sqrt(abs(x,2))))
TypeError: abs() takes exactly one argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:36) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print(round(sqrt(abs(x,2))))
	elif(-1<x<0)or(0<x<1):
		print(round(abs(x)))
	elif(x==0):
		print(0)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(sqrt(abs(x,2))))
TypeError: abs() takes exactly one argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:44) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		print(sqrt(abs(x)))
	elif(-1<x<0)or(0<x<1):
		print(abs(x))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.4106735979665885
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:02) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		q=sqrt(abs(x))
		print(round(q,2))
	elif(-1<x<0)or(0<x<1):
		q=abs(x)
		print(round(q))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:12) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		q=sqrt(abs(x))
		print(round(q,2))
	elif(-1<x<0)or(0<x<1):
		q=abs(x)
		print(round(q,2))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:18:19) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		q=sqrt(abs(x))
		print(round(q,2))
	elif(-1<x<0)or(0<x<1):
		q=abs(x)
		print(round(q,2))
	elif(x==0):
		print(0)
		
-- EXECUTION TIME:
0.159804
-- TEST CASE 1:
---- input:
-1.99
---- correct output:
1.41
---- user output:
1.41
-- TEST CASE 2:
---- input:
0.01
---- correct output:
0.01
---- user output:
0.01
-- TEST CASE 3:
---- input:
-256.0
---- correct output:
16.0
---- user output:
16.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 21:21:19) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		q=sqrt(abs(x))
		print(round(q,2))
	elif(-1<x<0)or(0<x<1):
		q=abs(x)
		print(round(q,2))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 21:21:39) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		q=sqrt(abs(x))
		print(round(q,2))
	elif(-1<x<0)or(0<x<1):
		q=abs(x)
		print(round(q,2))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 21:21:43) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		q=sqrt(abs(x))
		print(round(q,2))
	elif(-1<x<0)or(0<x<1):
		q=abs(x)
		print(round(q,2))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-19 21:21:45) 
-- CODE:
from math import*

x=float(input("valor de x: "))

if(x<0)or(x>0):
	if(x<=-1)or(x>=1):
		q=sqrt(abs(x))
		print(round(q,2))
	elif(-1<x<0)or(0<x<1):
		q=abs(x)
		print(round(q,2))
	elif(x==0):
		print(0)
		
-- OUTPUT:
1.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
